@@ -1,6 +1,6 @@
 {
   "name": "tour-operator",
-  "version": "1.1.2",
+  "version": "1.1.4",
   "description": "Tour Operators for LSX",
   "main": "gulpfile.js",
   "scripts": {
