@@ -3,9 +3,10 @@
 ### 1.1.4 (in Progress)
 * Fix - Adding the list of Envira Gallery tags to the wp_kses_post allowed filter method.
 * Dev - Added in WPForms Lite as a list of forms to choose for your enquiry.
+* Fix - Fixed tours and destinations collapsible tabs on mobile issue.
 
 ### 1.1.3
-*
+* Fix - Cleaning code to meet more Wordpress Standards
 
 ### 1.1.2
 * Fix - Changing the "id" to avoid cached sites pulling through the same gallery for each destination
